--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,26 @@ img:hover {
 }
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
-
+.column {
+  width: 30%;
+  display: inline-block;
+}
 /* create your tile classes! we recommend .small .med .large */
+/* div container
+div column which is 30% of container
+img - you want to fit this image within the column - it should be 100% of the width of the column
+ */
+.small {
+width: 100%;
+height: 100%;
+}
+
+.med {
+  width: 200%;
+  height: 200%;
+}
+
+.large {
+  width: 300%;
+  height: 300%;
+}
